{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "bd84d8ba-160d-488e-af6a-414107897ead",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "97a34a86-2d09-4c5b-be6b-aa6e74adbae5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MovePlayer",
                    "type": "Value",
                    "id": "6bd9d5f6-0713-4ba5-bfdc-4b3eb2ea34ac",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "9b2b9170-b5b8-4adb-8250-b702d2ce50d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "5936ce39-8f78-4b60-86a2-223cf54b9b51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "457cfa3e-6753-44c9-8edc-8478ea156fd7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Analog",
                    "id": "fa2387d2-026a-49b7-a552-e0ddc6cfd49c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "800621b4-c6ef-4909-bade-cd809b02f2ce",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "30e35fba-3aa3-4944-a1e0-5b648a8fd235",
                    "path": "<HID::Microntek              USB Joystick          >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6b4a4d32-05e3-4f58-a370-46d10380c376",
                    "path": "<HID::Microntek              USB Joystick          >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "db55fa5c-df9e-47b4-85a0-f82aa7d62d03",
                    "path": "<HID::Microntek              USB Joystick          >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "31e6c2a4-eea4-417d-8c9c-e947438e60e7",
                    "path": "<HID::Microntek              USB Joystick          >/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "03a92b79-29d5-4b64-a218-b6ac0f1f531c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "533a4cde-0c02-43d5-8187-cd3be90cb9ae",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2e6b9e19-ce24-4abf-9d4d-9e678e2c46fe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8555c864-60a7-4d68-8d5f-ab701c594ded",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fdf5d9f9-a2c5-4c50-970c-89a64e023489",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c78a5225-1f69-4937-b119-e157d0293e09",
                    "path": "<HID::Microntek              USB Joystick          >/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68b86e22-d8be-46db-8894-9e263f24c09a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63b3b49c-9366-45f7-a54d-8b26dd2e4edc",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "904176da-11e5-45ed-a771-30b98bc2ab67",
                    "path": "<HID::Microntek              USB Joystick          >/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}